--- a/src/makefile
+++ b/src/makefile
@@ -7,7 +7,7 @@ LIBS+=common.a libturtlegui.a
 ifeq ($(OS),Windows_NT)
 	LIBS+=-lmingw32
 endif
-LIBS+=-lSDL2main -lSDL2 -lSDL2_image
+LIBS+=-lSDL2main -lSDL2 -lSDL2_image -lSDL2_ttf
 
 #flags
 CXXFLAGS+=-std=c++11 $(addprefix -I,$(INCLUDES))
