Stripped out most of what wasn't needed

--- a/src/makefile
+++ b/src/makefile
@@ -30,10 +30,10 @@ OUT=$(addprefix $(OUTDIR)/,mecha)
 #targets
 all: $(OBJ) $(OUT)
 	$(MAKE) -C card_list
-	$(MAKE) -C TurtleGUI INCLUDES+=. INCLUDES+=.. INCLUDES+=../utilities
+	$(MAKE) -C TurtleGUI
 	$(MAKE) -C utilities
 	$(CXX) $(CXXFLAGS) -o $(OUT) $(OBJ) $(LIBS)
-	$(CXX) $(CXXFLAGS) -o $(OUTDIR)/card_renderer tools/card_renderer.cpp obj/render_trading_card.o obj/trading_card.o $(LIBS)
+#	$(CXX) $(CXXFLAGS) -o $(OUTDIR)/card_renderer tools/card_renderer.cpp obj/render_trading_card.o obj/trading_card.o $(LIBS)
 
 $(OBJ): | $(OBJDIR)
 
